--- a/docs/第一章 推荐系统基础/经典排序模型/2.2 FM.md
+++ b/docs/第一章 推荐系统基础/经典排序模型/2.2 FM.md
@@ -23,9 +23,9 @@ $$
 那么给定的公式就变成了
 $$ y = w_0 + w_1 x_1 + w_2 x_2 + w_3 x_3 + w_{12} x_1 x_2 + w_{13} x_1 x_3 + w_{23} x_2 x_3$$
 其中关键的二阶交叉项就生效就如图所示：
-在公式中，二阶特征交叉项涉及到特征 \(x_1\)、\(x_2\) 和 \(x_3\) 的两两组合。我们可以通过一个简单的表格来表示这些组合，其中行和列分别代表不同的特征，表格中的每个单元格代表对应行和列特征的乘积，即二阶交叉项。
+在公式中，二阶特征交叉项涉及到特征 $x_1$、$x_2$ 和 $x_3$ 的两两组合。我们可以通过一个简单的表格来表示这些组合，其中行和列分别代表不同的特征，表格中的每个单元格代表对应行和列特征的乘积，即二阶交叉项。
 
-虽然在数学上 \(x_1x_2\) 和 \(x_2x_1\) 是相同的，但在特征工程中，我们通常将它们视为不同的特征，因为它们可能在模型中有不同的权重。然而，为了简化模型，我们通常会避免重复的特征交叉项，只保留一种形式，例如 \(x_1x_2\) 而不是 \(x_2x_1\)。
+虽然在数学上 $x_1x_2$ 和 $x_2x_1$ 是相同的，但在特征工程中，我们通常将它们视为不同的特征，因为它们可能在模型中有不同的权重。然而，为了简化模型，我们通常会避免重复的特征交叉项，只保留一种形式，例如 $x_1x_2$ 而不是 $x_2x_1$。
 在实际应用中，我们可能会选择只包含上三角或下三角的组合，以避免重复项。例如，如果我们选择上三角，那么表格将如下所示：
 <div class="center">
 <style>
@@ -46,7 +46,7 @@ $$ y = w_0 + w_1 x_1 + w_2 x_2 + w_3 x_3 + w_{12} x_1 x_2 + w_{13} x_1 x_3 + w_{
 
 </div>
 
-这样，我们只考虑 \(x_1x_2\)、\(x_1x_3\) 和 \(x_2x_3\) 这三个二阶交叉项。这种选择有助于减少模型的复杂度，同时仍然能够捕捉特征之间的交互效应。
+这样，我们只考虑 $x_1x_2$、$x_1x_3$ 和 $x_2x_3$ 这三个二阶交叉项。这种选择有助于减少模型的复杂度，同时仍然能够捕捉特征之间的交互效应。
 
 但这个式子有一个问题，**只有当$x_i$与$x_j$均不为0时这个二阶交叉项才会生效**，后面这个特征交叉项本质是和多项式核SVM等价的，为了解决这个问题，我们的FM登场了！
 
