--- a/docs/第一章 推荐系统基础/经典排序模型/特征交叉/2.4 PNN.md
+++ b/docs/第一章 推荐系统基础/经典排序模型/特征交叉/2.4 PNN.md
@@ -8,17 +8,17 @@ PNN模型其实是对IPNN和OPNN的总称，两者分别对应的是不同的Pro
 
 ## 2. 模型的结构及原理
 
-> 在学习PNN模型之前，应当对于DNN结构具有一定的了解，同时已经学习过了前面的章节。
+在学习PNN模型之前，应当对于DNN结构具有一定的了解，同时已经学习过了前面的章节。
 
 PNN模型的整体架构如下图所示：
 
-<img src="../../../assest/PNN.webp" style="zoom: 40%;" />
+<img src="../../../../assest/PNN.webp" style="zoom: 40%;" />
 
 一共分为五层，其中除了Product Layer别的layer都是比较常规的处理方法，均可以从前面的章节进一步了解。模型中最重要的部分就是通过Product层对embedding特征进行交叉组合，也就是上图中红框所显示的部分。
 
 Product层主要有线性部分和非线性部分组成，分别用$l_z$和$l_p$来表示，
 
-<img src="../../../assest/PNN_Product.png" alt="image-20210308143101261" style="zoom: 100%;" />
+<img src="../../../../assest/PNN_Product.png" alt="image-20210308143101261" style="zoom: 100%;" />
 
 1. 线性模块，一阶特征(未经过显示特征交叉处理)，对应论文中的$l_z=(l_z^1,l_z^2, ..., l_z^{D_1})$
 2. 非线性模块，高阶特征(经过显示特征交叉处理)，对应论文中的$l_p=(l_p^1,l_p^2, ..., l_p^{D_1})$
